<resources>
    <string name="app_name">Alarm</string>
    <string name="app_title">Please... Wake Up!</string>
    <string name="title_activity_alarms"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">설정</string>

    <string name="pick_the_person">대상 선택</string>
    <string name="start_keyword">알람 시작 단어</string>
    <string name="end_keyword">알람 멈춤 단어</string>
    <string name="set_start_time">알람 가능 시간(시작)</string>
    <string name="set_end_time">알람 가능 시간(멈춤)</string>
    <string name="alarm_monday">월요일</string>
    <string name="alarm_tuesday">화요일</string>
    <string name="alarm_wednesday">수요일</string>
    <string name="alarm_thursday">목요일</string>
    <string name="alarm_friday">금요일</string>
    <string name="alarm_saturday">토요일</string>
    <string name="alarm_sunday">일요일</string>


    <string name="delete_dialog_message">알람을 삭제 하시겠습니까?</string>
    <string name="add_confirm">추가</string>
    <string name="edit_confirm">완료</string>"

    <string name="menu_add_alarms">Add</string>

    <string name="banner_ad_unit_id_choice">ca-app-pub-4268007252677003/9029086373</string>

</resources>
